# reportfrombot

./: .editorconfig  .env.sample  .flake8  .gitignore  .isort.cfg  .pylintrc  LICENSE  README  README.md  pyproject.toml
.run/: black.run.xml  isort.run.xml  mypy.run.xml  run dev.run.xml  run.run.xml
src/: app.py  command.py  main.py  zoom.py
src/core/: render.py  requests.py  settings.py  utils.py
src/services/: __init__.py  calendar.py  gitlab.py  indexes.py  notion.py  telegram.py  youtrack.py
src/templates/en/: report.j2
src/templates/ru/: report.j2  report_v2.j2  report_v3.j2  report_v4.j2
