[tool.poetry]
name = "reportfrombot"
version = "0.0.1"
description = ""
authors = ["serge <me@pwrd.org>"]

[tool.poetry.dependencies]
python = "^3.8"
python-gitlab = "^2.9.0"
pyTelegramBotAPI = "^3.8.1"
python-dotenv = "^0.18.0"
Jinja2 = "^3.0.1"
ics = "^0.7"

[tool.poetry.dev-dependencies]
isort = "^5.9.2"
flake8-absolute-import = "^1.0"
flake8-bugbear = "^21.4.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.0.0"
flake8-eradicate = "^1.1.0"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.0.0"
flake8-mock = "^0.3"
flake8-multiline-containers = "^0.0.18"
flake8-mutable = "^1.2.0"
flake8-pie = "^0.14.0"
flake8-pep3101 = "^1.3.0"
flake8-print = "^4.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.5.0"
flake8-quotes = "^3.2.0"
flake8-simplify = "^0.14.1"
flake8-todo = "^0.7"
flake8-variables-names = "^0.0.4"
flake8-walrus = "^1.1.0"
flake8-use-fstring = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
