[tool.poetry]
name = "reportfrombot"
version = "0.0.1"
description = ""
authors = ["serge <me@pwrd.org>"]

[tool.poetry.dependencies]
python = "^3.9"
python-gitlab = "^3.2.0"
pyTelegramBotAPI = "^4.4.0"
python-dotenv = "^0.19.2"
Jinja2 = "^3.0.3"
ics = "^0.7"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"
mypy = "^0.941"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
known_django = ['django']
known_core = ['core']
known_apps = ['apps']
known_api = ['api']
sections = ['FUTURE', 'STDLIB', 'DJANGO', 'THIRDPARTY', 'CORE', 'APPS', 'FIRSTPARTY', 'API', 'LOCALFOLDER']
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_glob = "*/.serverless/*,*/migrations/*,*/node_modules/*"
filter_files = true

[tool.black]
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | \.serverless
    | build
    | dist
    | node_modules
  )/
  | migrations
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
